--- a/src/index.css
+++ b/src/index.css
@@ -4,11 +4,17 @@ div,
 h1,
 img,
 input,
-p {
+option,
+p,
+select {
   box-sizing: border-box;
   margin: 0;
   padding: 0;
   font-family: Helvetica, sans-serif;
+}
+
+html {
+  background-color: #f2f2f2;
 }
 
 body {
